--- a/spring_12_jdbcTemplate/pom.xml
+++ b/spring_12_jdbcTemplate/pom.xml
@@ -8,5 +8,22 @@
     <artifactId>spring_12_jdbcTemplate</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-
+    <packaging>jar</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.2.4.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>5.2.4.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.6</version>
+        </dependency>
+    </dependencies>
 </project>
